# document-converter

./: .gitignore  .pdm-python  Makefile  README.md  pyproject.toml  run.py
scripts/: convert.sh
src/: main.py
templates/: default.tex  template.tex
